[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/characters/character_1/GirlFighterBomb.png" type="Texture" id=1]
[ext_resource path="res://scripts/projectiles/LucySuper.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 770, 748 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 748, 770, 748 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 160.0

[sub_resource type="CircleShape2D" id=7]
radius = 64.4981

[node name="lucySuper" type="KinematicBody2D"]
light_mask = 12
collision_layer = 4
collision_mask = 6
script = ExtResource( 2 )

[node name="KiOrb" type="AnimatedSprite" parent="."]
self_modulate = Color( 1, 1, 1.5, 1 )
light_mask = 12
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="Area2D/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
